--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet child </title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -81,16 +81,22 @@
       margin-right: 5px;
     }
 
+    #musicPlayerContainer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #c0c0c0; /* Windows 98 button background color */
+      padding: 12px;
+      box-sizing: border-box;
+    }
+
     #musicPlayer {
       width: 100%; /* Take up the whole width */
-      max-width: 500px; /* Maximum width for consistency */
-      background-color: #c0c0c0; /* Windows 98 button background color */
+      background-color: inherit;
       border: none;
       color: #000; /* Windows 98 button text color */
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
-      padding: 12px;
-      position: fixed;
-      bottom: 0; /* Stick to the bottom */
     }
 
     .playlist-buttons {
@@ -128,7 +134,7 @@
     #visualizer {
       width: 100%;
       height: 100%;
-      background-color: #000; /* Visualizer background color */
+      background-color: #333; /* Darker background for better visibility */
     }
 
     .moving-icon {
