--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <style>
     /* Windows 98 desktop styles */
     body {
-      background: #008080; /* Windows 98 teal background color */
       margin: 0;
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
       display: flex;
@@ -16,6 +15,7 @@
       justify-content: center;
       height: 100vh;
       overflow: hidden; /* Hide overflow to prevent scroll bars */
+      background-color: #333; /* Dark background color for visualizer */
     }
 
     .desktop {
@@ -134,7 +134,7 @@
     #visualizer {
       width: 100%;
       height: 100%;
-      background-color: #333; /* Darker background for better visibility */
+      background-color: #000; /* Visualizer background color */
     }
 
     .moving-icon {
