--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Windows 98 Radio Station</title>
+  <title>internet child </title>
 
   <style>
     /* Windows 98 desktop styles */
